Fixed overflow in agenda deportiva

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -176,3 +176,9 @@
     padding: 5px; /* Reducir padding */
   }
 }
+
+@media (max-width: 1979px) {
+  .futbol-tv-agendas {
+    overflow-x: scroll;
+  }
+}
